--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node server",
+    "start": "nodemon Server.js",
     "server": "nodemon server"
   },
   "keywords": [
