--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon Server.js",
-    "server": "nodemon server"
+    "start": "nodemon server.js",
+    "server": "nodemon server.js"
   },
   "keywords": [
     "node",
