--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.4",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.16"
   }
